# compiler

./: .gitignore  README.md  index.ts  package.json  tsconfig.json
Clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
Clox/note/: compare.md
Jlox/src/: note.md
Jlox/src/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxArray.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  LoxTrait.java  Parser.java  RNPPrinter.java  Resolver.java  Return.java  Scanner.java  Stmt.java  TokenType.java
Jlox/src/com/craftinginterpreters/tool/: GenerateAst.java
Jlox/test/: case1.txt
antlr4_test/: package.json
antlr4_test/.antlr/: Hello.java
antlr4_test/Hello/: Hello.g4  Hello.play  Hello.ts
antlr4_test/Hello/.antlr/: Hello.java
antlr4_test/playScript/.antlr/: CommonLexer.interp  CommonLexer.java  PlayScriptLexer.java  PlayScriptParser.java
c_front/: 05_SimpleParser.ts  05_SimpleScript.ts  ASTNode.ts  SimpleCalculator.ts  global_var.ts  parser.ts  simpleReader.ts  token.ts
design_pattern/: if_then.ts  visitor.ts
